force-app/main/default/objects/Weather_Report__c/fields/Feels_Like__c.field-meta.xml
<CustomField>
    <fullName>Feels_Like__c</fullName>
    <label>Feels Like</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>