force-app/main/default/objects/Weather_Report__c/fields/Humidity__c.field-meta.xml
<CustomField>
    <fullName>Humidity__c</fullName>
    <label>Humidity</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>