force-app/main/default/objects/Weather_Report__c/fields/Weather_Description__c.field-meta.xml
<CustomField>
    <fullName>Weather_Description__c</fullName>
    <label>Weather Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>