force-app/main/default/objects/Weather_Report__c/fields/Wind_Speed__c.field-meta.xml
<CustomField>
    <fullName>Wind_Speed__c</fullName>
    <label>Wind Speed</label>
    <precision>16</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>