force-app/main/default/objects/Weather_Report__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Humidity__c</columns>
    <columns>Temperature__c</columns>
    <columns>Timestamp__c</columns>
    <columns>Weather_Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>